Changing html file

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 					<div class="card-body">
 					<h5 class="card-title">SQL Injection</h5>
 
-					<form action="login1.php" method="get">
+					<form action="login.php" method="get">
 						<label for="fname">Username:</label><br>
 						<input type="text" id="uname" name="uname" placeholder="Enter Username"><br>
 						<label for="lname">Password:</label><br>
@@ -67,7 +67,7 @@
 							<div class="card-body">
 								<h5 class="card-title">Example 1</h5>
 								<p class="card-text">
-									<form action="login1.php" method="get">
+									<form action="login.php" method="get">
 										<label for="fname">Username:</label>
 										<input type="text" id="uname" name="uname" value="' or 1=1-- "><br>
 										<label for="lname">Password:</label>
@@ -81,7 +81,7 @@
 							<div class="card-body">
 								<h5 class="card-title">Example 2</h5>
 								<p class="card-text">
-									<form action="login1.php" method="get">
+									<form action="login.php" method="get">
 										<label for="fname">Username:</label>
 										<input type="text" id="uname" name="uname" value="admin' or '1'='1"><br>
 										<label for="lname">Password:</label>
