--- a/code.html
+++ b/code.html
@@ -8,7 +8,7 @@
 			href="https://www.google.com/s2/favicons?domain=https://www.apachefriends.org/index.html">
 	</head>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-	<link rel="stylesheet" href="style_code.css">
+	<link rel="stylesheet" href="./styles/style_code.css">
 	<body>
 		<div class="nav-container">
 			<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -50,13 +50,13 @@
         <section>
             <div class="container">
                 <h2>HTML code</h2><br>
-                <img src="html.png"
+                <img src="./content/assets/code/html.png"
                     alt="HTML code">
                 <h2>CSS code</h2><br>
-                <img src="css.png"
+                <img src="./content/assets/code/css.png"
                     alt="CSS code">
                 <h2>PHP code</h2><br>
-                <img src="php.png"
+                <img src="./content/assets/code/php.png"
                     alt="PHP code">
             </div>
         </section>
