--- a/database.html
+++ b/database.html
@@ -8,7 +8,7 @@
 			href="https://www.google.com/s2/favicons?domain=https://www.apachefriends.org/index.html">
 	</head>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-	<link rel="stylesheet" href="style_database.css">
+	<link rel="stylesheet" href="./styles/style_database.css">
 	<body>
 		<div class="nav-container">
 			<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -44,6 +44,6 @@
 		<p>
 			Use the username and passwords from this database to receive successful login.
         </p>
-        <img src="database.png">
+        <img src="./content/assets/database/database.png">
 	</body>
 </html>
