--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 			href="https://www.google.com/s2/favicons?domain=https://www.apachefriends.org/index.html">
 	</head>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="./styles/style.css">
 	<body>
 		<div class="nav-container">
 			<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -45,7 +45,7 @@
 			<div class="card mb-3" style="max-width: 540px;">
 				<div class="row no-gutters">
 				<div class="col-md-4">
-					<img src="SQL-Injection.jpg" class="card-img" alt="Server with injection">
+					<img src="./content/assets/index/SQL-Injection.jpg" class="card-img" alt="Server with injection">
 				</div>
 				<div class="col-md-8">
 					<div class="card-body">
@@ -93,6 +93,6 @@
 							</div>
 				</div>
 			</div>
-		<script src="script.js"></script>
+		<script src="./scripts/script.js"></script>
 	</body>
 </html>
