--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 										<input type="text" id="uname1" name="uname" value="' or 1=1-- "><br>
 										<label for="lname">Password:</label>
 										<input type="password" id="pass1" name="pass" placeholder="leave blank"><br>
-										<input type="submit" id="btn" value="Press 2 times"  onclick="myFunction1()">
+										<input type="submit" id="btn" value="Inject using Example 1"  onclick="myFunction1()">
 									</form>
 								</p>
 							</div>
@@ -87,7 +87,7 @@
 										<input type="text" id="uname2" name="uname" value="admin' or '1'='1"><br>
 										<label for="lname">Password:</label>
 										<input type="password" id="pass2" name="pass" placeholder="leave blank"><br>
-										<input type="submit" id="btn" value="Press 2 times"  onclick="myFunction2()">
+										<input type="submit" id="btn" value="Inject using Example 2"  onclick="myFunction2()">
 									</form>
 								</p>
 							</div>
