--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 				<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
 				</li>
 				<li class="nav-item">
-				<a class="nav-link" href="docs.html">Docs</a>
+				<a class="nav-link" href="view/docs.html">Docs</a>
 				</li>
 				<li class="nav-item">
-				<a class="nav-link" href="code.html">Code</a>
+				<a class="nav-link" href="view/code.html">Code</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="database.html">Database</a>
+					<a class="nav-link" href="view/database.html">Database</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="https://github.com/AswinBarath/sql-injection-and-prevention" target="__blank">
